--- a/index.css
+++ b/index.css
@@ -1,3 +1,22 @@
-img{
-  width:100%;
+* {
+  margin: 0;
+  padding: 0;
+}
+.text {
+  padding: 0 10px 50px;
+}
+img {
+  width: 100%;
+}
+.phone {
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+  width: 90%;
+  background-color: pink;
+  border-radius: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  color: white;
 }
